--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -1,8 +1,162 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Trang chủ";
 }
+@* <link rel="stylesheet" href="~/wwwroot/css/StyleSheet.css"/>*@
+<div class="wrap">
+	<div class="wrap-admin">
+		<div class="search-block">
+			<div class="container">
+				<div class="row">
+					<h2 class="search-title col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+						Chào mừng đến với bến xe trung tâm TP.Đà Nẵng
+					</h2>
+					<div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+						<div class="input-group">
+							<label for="" class="label">Từ:</label>
+							<input type="text" class="form-control" name="" id="" placeholder="Điểm bắt đầu">
+						</div>
+					</div>
+					<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+						<div class="input-group">
+							<label for="" class="label">Đến:</label>
+							<input type="text" class="form-control" name="" id="" placeholder="Điểm dừng">
+						</div>
+					</div>
+					<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+						<div class="input-group">
+							<span class="label">Ngày:</span>
+							<input class="form-control" type="date" required>
+						</div>
+					</div>
+					<button type="button" class="btn col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mx-auto mb-3" style="background-color:#ffc312">
+						<i class="fas fa-search"></i> Tìm Kiếm
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="promotion">
+		<div class="container">
+			<h2 class="text-uppercase font-bolder">Ưu Đãi</h2>
+			<div class="row blog">
+				<div class="col-md-12 mx-auto">
+					<div id="blogCarousel" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
+							<li data-target="#blogCarousel" data-slide-to="1"></li>
+						</ol>
+						<!-- Carousel items -->
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="row">
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+								</div>
+								<!--.row-->
+							</div>
+							<!--.item-->
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+									<div class="col-md-3">
+										<a href="#">
+											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+										</a>
+									</div>
+								</div>
+								<!--.row-->
+							</div>
+							<!--.item-->
+
+						</div>
+						<!--.carousel-inner-->
+					</div>
+					<!--.Carousel-->
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="about-system">
+		<div class="container">
+			<div class="row">
+				<div class="contents col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<h3 class="about-title">
+						Tuyến Đường
+					</h3>
+					<p class=" about-text">
+						Đến Đà Nẵng, ngoài việc đi bằng máy bay, tàu hỏa thì xe khách cũng là phương tiện được rất nhiều du khách lựa chọn, ở các bến xe Đà Nẵng bạn có thể tìm cho mình rất nhiều các nhà xe với những lộ trình đi tới nhiều tỉnh thành trên cả nước, điều đó khiến
+						xe khách trở thành một trong những phương tiện đem lại sự thuận tiện cho những chuyến đi xa. <br> Một số tuyến xe chính tại Bến xe trung tâm Đà Nẵng: Đà Nẵng – Hà Nội, Đà Nẵng – Quảng Bình, Đà Nẵng
+						– Ninh Bình, Đà Nẵng – Thanh Hóa, Đà Nẵng – Nghệ An, Đà Nẵng – Thừa Thiên Huế, Đà Nẵng – Lâm Đồng, Đà Nẵng – TP. HCM, Đà Nẵng – Quảng Ngãi, Đà Nẵng – Bình Định, Đà Nẵng – Đắk Lắk, Đà Nẵng – Khánh Hòa, Đà Nẵng – Phú Yên, Đà
+						Nẵng – Ninh Thuận, Đà Nẵng – Gia Lai, Đà Nẵng – Hải Phòng.
+					</p>
+				</div>
+				<div class="contents col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<h3 class="about-title">
+						Nhà Xe
+					</h3>
+					<p class=" about-text">
+						- Bến xe khách thành phố Đà Nẵng có sự liên kết chặc chẽ với các nhà xe trên khắp thành phố, với phương tiện hiện đại và giá thành phải chăng có thể kể đến những nhà xe nổi tiếng như sau:Xe khách Tiến tuyến Tp Hồ Chí Minh-Đà nẵng,nhà xe Hiếu Viện, xe
+						khách Thọ Mười, xe khách Hoàng Long,nhà xe Phúc Thuận…
+					</p>
+				</div>
+				<div class="contents col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<h3 class="about-title">
+						Đại Lý Bán Vé
+					</h3>
+					<p class=" about-text">
+						Đến Đà Nẵng, ngoài việc đi bằng máy bay, tàu hỏa thì xe khách cũng là phương tiện được rất nhiều du khách lựa chọn, ở các bến xe Đà Nẵng bạn có thể tìm cho mình rất nhiều các nhà xe với những lộ trình đi tới nhiều tỉnh thành trên cả nước, điều đó khiến
+						xe khách trở thành một trong những phương tiện đem lại sự thuận tiện cho những chuyến đi xa. <br> Một số tuyến xe chính tại Bến xe trung tâm Đà Nẵng: Đà Nẵng – Hà Nội, Đà Nẵng – Quảng Bình, Đà Nẵng
+						– Ninh Bình, Đà Nẵng – Thanh Hóa, Đà Nẵng – Nghệ An, Đà Nẵng – Thừa Thiên Huế, Đà Nẵng – Lâm Đồng, Đà Nẵng – TP. HCM, Đà Nẵng – Quảng Ngãi, Đà Nẵng – Bình Định, Đà Nẵng – Đắk Lắk, Đà Nẵng – Khánh Hòa, Đà Nẵng – Phú Yên, Đà
+						Nẵng – Ninh Thuận, Đà Nẵng – Gia Lai, Đà Nẵng – Hải Phòng.
+					</p>
+				</div>
+				<div class="contents col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<h3 class="about-title">
+						Bến Xe
+					</h3>
+					<p class=" about-text">
+						Đến Đà Nẵng, ngoài việc đi bằng máy bay, tàu hỏa thì xe khách cũng là phương tiện được rất nhiều du khách lựa chọn, ở các bến xe Đà Nẵng bạn có thể tìm cho mình rất nhiều các nhà xe với những lộ trình đi tới nhiều tỉnh thành trên cả nước, điều đó khiến
+						xe khách trở thành một trong những phương tiện đem lại sự thuận tiện cho những chuyến đi xa. <br> Một số tuyến xe chính tại Bến xe trung tâm Đà Nẵng: Đà Nẵng – Hà Nội, Đà Nẵng – Quảng Bình, Đà Nẵng
+						– Ninh Bình, Đà Nẵng – Thanh Hóa, Đà Nẵng – Nghệ An, Đà Nẵng – Thừa Thiên Huế, Đà Nẵng – Lâm Đồng, Đà Nẵng – TP. HCM, Đà Nẵng – Quảng Ngãi, Đà Nẵng – Bình Định, Đà Nẵng – Đắk Lắk, Đà Nẵng – Khánh Hòa, Đà Nẵng – Phú Yên, Đà
+						Nẵng – Ninh Thuận, Đà Nẵng – Gia Lai, Đà Nẵng – Hải Phòng.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+@*<script src="~/js/JavaScript.js"></script>*@
