--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -10,91 +10,93 @@
 					<h2 class="search-title col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 						Chào mừng đến với bến xe trung tâm TP.Đà Nẵng
 					</h2>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-						<div class="input-group">
-							<label for="" class="label">Từ:</label>
-							<input type="text" class="form-control mx-auto my-auto" name="" id="" placeholder="Điểm bắt đầu" list="diembatdau">
-							<datalist id="diembatdau">
-								<option value="Da Nang"></option>
-								<option value="Quang Nam"></option>
-								<option value="Gia Lai"></option>
-								<option value="Dong Nai"></option>
-							</datalist>
+						<div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+							<div class="input-group">
+								<label for="" class="label">Từ</label>
+								<input id="input-start"  class="form-control mx-auto my-auto" placeholder="điểm bắt đầu" list="start-points" required>
+								<datalist id="start-points">
+									<option value="Đà Nẵng">Đà Nẵng</option>
+									<option value="Quảng Nam">Quảng Nam</option>
+									<option value="Gia Lai">Gia Lai</option>
+									<option value="Đồng Nai">Đồng Nai</option>
+								</datalist>
+							</div>
 						</div>
-					</div>
-					<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-						<div class="input-group">
-							<label for="" class="label">Đến:</label>
-							<input type="text" class="form-control mx-auto my-auto" name="" id="" placeholder="Điểm dừng" list="diemketthuc">
-							<datalist id="diemketthuc">
-								<option value="Da Nang"></option>
-								<option value="Quang Nam"></option>
-								<option value="Gia Lai"></option>
-								<option value="Dong Nai"></option>
-							</datalist>
+						<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+							<div class="input-group">
+								<label for="" class="label">Đến</label>
+								<input id="input-stop" class="form-control mx-auto my-auto" name="" placeholder="Điểm dừng" list="stop-points" required>
+								<datalist id="stop-points">
+									<option value="Đà Nẵng">Đà Nẵng</option>
+									<option value="Quảng Nam">Quảng Nam</option>
+									<option value="Gia Lai">Gia Lai</option>
+									<option value="Đồng Nai">Đồng Nai</option>
+								</datalist>
+							</div>
 						</div>
-					</div>
-					<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-						<div class="input-group">
-							<span class="label">Ngày:</span>
-							<input class="form-control mx-auto my-auto" type="date" required>
+						<div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+							<div class="input-group">
+								<span class="label">Ngày</span>
+								<input id="input-date" class="form-control mx-auto my-auto" type="date" required>
+							</div>
 						</div>
-					</div>
-					<div class="nangcao col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="toggle">
-						<div class="row">
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-								<div class="input-group">
-									<label for="" class="label">Nhà Xe:</label>
-									<input type="text" class="form-control mx-auto my-auto" name="" id="" placeholder="Nhà Xe" list="nhaxe">
-									<datalist id="nhaxe">
-										<option value="Ong Phuc"></option>
-										<option value="Ong Tung"></option>
-										<option value="Ong Nghia"></option>
-										<option value="Ong Tho"></option>
-									</datalist>
+						<div class="nangcao col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="toogle">
+							<div class="row">
+								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+									<div class="input-group">
+										<label for="" class="label">Nhà Xe</label>
+										<select id="input-bus" class="form-control mx-auto my-auto" name="" >
+											<option>Ong Phuc</option>
+											<option>Ong Tung</option>
+											<option>Ong Nghia</option>
+											<option>Ong Tho</option>
+										</select>
+									</div>
 								</div>
-							</div>
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-								<form action="" class="input-group">
-									<label for="quantity" class="label">Khoảng T/g:</label>
-									<input type="number" class="form-control mx-auto my-auto" id="quantity" name="quantity" min="1" max="48" step="0.5">
-								</form>
-							</div>
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-								<div class="input-group">
-									<label for="" class="label">Nhà Xe:</label>
-									<input type="text" class="form-control mx-auto my-auto" name="" id="" placeholder="Loại Xe" list="loaixe">
-									<datalist id="loaixe">
-										<option value="xe 4 banh"></option>
-										<option value="xe 5 banh"></option>
-										<option value="xe 6 banh"></option>
-										<option value="xe 7 bánh"></option>
-									</datalist>
-								</div>
-							</div>
-							<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-								<form action="" class="input-group" id="money">
-									<label for="quantity" class="label">Giá Vé:</label>
-									<input type="number" class="form-control mx-auto my-auto" id="quantity" name="quantity" min="50000" max="500000" step="50000">
-								</form>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto mb-3">
-						<button type="button" class="btn  d-block" style="background-color: #ffc312;width: 50%; margin:auto" id="toggle-button">
-							<i class="fas fa-caret-down"></i> Tìm Kiếm Nâng Cao
-						</button>
-					</div>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto mb-3">
-						<button type="button" class="btn  d-block" style="background-color:#ffc312; width:50%; margin:auto">
-							<i class="fas fa-search"></i> Tìm Kiếm
-						</button>
-					</div>
+								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
 
+									<label for="quantity" class="label">Thời gian di chuyển</label>
+									<input id="input-interval" type="number" class="form-control mx-auto my-auto" name="quantity" min="1" max="48" step="0.5">
+
+								</div>
+								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+									<div class="input-group">
+										<label for="" class="label">Loại Xe</label>
+										<input id="input-type" class="form-control mx-auto my-auto" list="seat-types">
+										<datalist id="seat-types">
+											<option>12 Ghế</option>
+											<option>16 Ghế</option>
+											<option>24 Ghế</option>
+											<option>29 Ghế</option>
+											<option>35 Ghế</option>
+											<option>45 Ghế</option>
+											<option>50 Ghế</option>
+										</datalist>
+									</div>
+								</div>
+								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+
+									<label for="quantity" class="label">Giá Vé:</label>
+									<input id="input-cost" type="number" class="form-control mx-auto my-auto" name="quantity" min="50000" max="500000" step="50000">
+
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto mb-3">
+							<button id="toogle-button" type="button" class="btn  d-block" style="background-color: #ffc312;width: 50%; margin:auto" >
+								<i class="fas fa-caret-down"></i> Tìm Kiếm Nâng Cao
+							</button>
+						</div>
+						<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto mb-3">
+							<button id="button-find" type="button" class="btn  d-block" style="background-color:#ffc312; width:50%; margin:auto">
+								<i class="fas fa-search"></i> Tìm Kiếm
+							</button>
+						</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div id="result-holder" class ="container" ></div>
 	<div class="promotion">
 		<div class="container">
 			<h2 class="text-uppercase font-bolder">Ưu Đãi</h2>
