--- a/QuanLyBenXeWebApp/Views/_ViewImports.cshtml
+++ b/QuanLyBenXeWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using QuanLyBenXeWebApp
 @using QuanLyBenXeWebApp.Models
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
