--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -46,6 +46,7 @@
 									<div class="input-group">
 										<label for="" class="label">Nhà Xe</label>
 										<select id="input-bus" class="form-control mx-auto my-auto" name="" >
+											<option></option>
 											<option>Ong Phuc</option>
 											<option>Ong Tung</option>
 											<option>Ong Nghia</option>
@@ -54,10 +55,10 @@
 									</div>
 								</div>
 								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-
-									<label for="quantity" class="label">Thời gian di chuyển</label>
-									<input id="input-interval" type="number" class="form-control mx-auto my-auto" name="quantity" min="1" max="48" step="0.5">
-
+									<div class="input-group">
+										<label for="quantity" class="label">Khoang t/g:</label>
+										<input id="input-interval" type="number" class="form-control mx-auto my-auto" name="quantity" min="1" max="48" step="0.5">
+									</div>
 								</div>
 								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
 									<div class="input-group">
@@ -75,10 +76,10 @@
 									</div>
 								</div>
 								<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-
-									<label for="quantity" class="label">Giá Vé:</label>
-									<input id="input-cost" type="number" class="form-control mx-auto my-auto" name="quantity" min="50000" max="500000" step="50000">
-
+									<div class="input-group">
+										<label for="quantity" class="label">Giá Vé:</label>
+										<input id="input-cost" type="number" class="form-control mx-auto my-auto" name="quantity" min="50000" max="500000" step="50000">
+									</div>
 								</div>
 							</div>
 						</div>
