--- a/QuanLyBenXeWebApp/Views/QTV2/CoBan.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/CoBan.cshtml
@@ -7,6 +7,7 @@
 <h3>Chỉnh sửa thông tin cơ bản</h3>
 <div class="container">
 	<form method="post" asp-action="coban">
+		<p><span></span></p>
 		<table>
 			<tr>
 				<td><label>Tên nhà xe</label></td>
@@ -34,6 +35,6 @@
 				<td><span asp-validation-for=DiaChi></span></td>
 			</tr>
 		</table>
-		<button type="submit">Cập nhật</button>
+		<button>Cập nhật</button>
 	</form>
 </div>
