--- a/QuanLyBenXeWebApp/Views/QTV2/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	Layout = "~/Views/QTV2/_Qtv2Layout.cshtml";
+	Layout = "~/Views/Qtv2/_Qtv2Layout.cshtml";
 	ViewData["Title"] = "Quản trị thông tin nhà xe";
 }
 <div class="container">
